# baseline

./: .gitignore  README.md
nfl/fantasy-league-table/: fantasy-league-table.R
nfl/fantasy/league-table/: league-table.R  league-table.py  pyproject.toml
nfl/fantasy/matchup/: main.py  model.py  persistor.py  pyproject.toml  sleeper.py
nfl/fantasy/sleeper-roster/: main.py  model.py  pyproject.toml  repository.py  sleeper.py
nfl/production-opportunity/: production-opportunity-qb.R  production-opportunity-rb.R  production-opportunity-wr.R
nfl/shared/: nfl-utility.R
